# constellation

./: .env  .env 3  .gitignore  README.md  README.mdgit  docker-compose.yaml  init_venv.bat  instructions.txt  pytest_output.txt  requirements.txt  schema.prisma  setup.py  uninstall.txt
api/: .env  .env 2  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
api/backend/app/: __init__.py  config.py  database.py  dependencies.py  embeddings.py  logger.py  main.py  models.py  schemas.py  taxonomy.py
api/backend/app/auth/: auth.py
api/backend/app/features/agent/: README.md  dev_crew.py  pdf_reader.py  research_crew.py  scrapper.py  test_dev_tools.py  test_research_crew.py  test_research_tools.py
api/backend/app/features/agent/config/: agents.yaml  tasks.yaml
api/backend/app/features/agent/crews/: agents.yaml  crew.py  crew_process.py  dev_crew.py  research_crew.py  test_crew.py
api/backend/app/features/agent/scraped_papers/: 20241012_150020_Causality for Earth Science -- A Review on Time-se.json  20241012_150020_Deep reinforcement learning in World-Earth system .json  20241012_150020_Learning quantum data with the quantum Earth Mover.json  20241012_150020_Living in the Physics and Machine Learning Interpl.json  20241012_150020_Machine Learning for Robust Identification of Comp.json  20241012_150020_Machine learning for Earth System Science ESS A su.json  20241012_150020_Machine-learning enabled thermodynamic model for t.json  20241012_150020_Prediction on Properties of Rare-earth 2-17-X Magn.json  20241012_150023_Advances in Artificial Intelligence Require Progre.json  20241012_150023_Artificial Intelligence to Enhance Mission Science.json  20241012_150023_Interpretable Geoscience Artificial Intelligence X.json  20241012_150023_Next-Generation Earth System Models Towards Reliab.json  20241012_150023_On the Foundations of Earth and Climate Foundation.json  20241012_150023_Towards a Collective Agenda on AI for Earth Scienc.json  20241012_150023_Will Artificial Intelligence supersede Earth Syste.json  20241012_150026_70 years of machine learning in geoscience in revi.json  20241012_150026_A Physics-guided Generative AI Toolkit for Geophys.json  (+28 more)
api/backend/app/features/core/: README.md
api/backend/app/features/dagster/: README.md
api/backend/app/scripts/: populate_papers.py
api/backend/app/utils/: __init__.py  helpers.py  serialization_utils.py
api/backend/constellation_backend.egg-info/: PKG-INFO  SOURCES.txt
api/backend/prisma/: __init__.py  schema.prisma
api/backend/tests/: schema.prisma  test_block_controller.py  test_blocks.py  test_create_block.py  test_edge_controller.py  test_edges.py  test_pipelines.py
api/backend/tests/test_controller/: test_block_controller.py
api/backend/tests/test_service/: schema.prisma  test_audit_service.py  test_block_service.py  test_edge_service.py  test_pipeline_service.py  test_taxonomy_service.py  test_user_service.py  test_vector_embedding_service.py
api/db/: chroma.sqlite3
api/prisma/: __init__.py  client.py  partial_types.py  schema 2.prisma  schema.prisma
app/: __init__.py  config.py  (+7 more)
dagster/: .env  README.md  api.Dockerfile  assets.Dockerfile  create_dataset.py  dagster.Dockerfile  dagster.yaml  pyproject.toml  sample_dags.txt  workspace.yaml
dagster/orchestrator/app/: main.py
dagster/orchestrator/assets/: constants.py  ops.py  repository.py
dagster/orchestrator/tests/: test_repository.py
modal/: Dockerfile  README.md  main.py  pyproject.toml  utils.py
modal/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
modal/modal-creator/: main.py  utils.py
modal/modal_creator/: main.py  utils.py
modal/modal_creator/app/: main.py
modal/modal_creator/assets/: utils.py
modal/modal_creator/tests/: test_main.py
(+178 files in other folders)
