[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend service for the constellation project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
supabase = "^2.7.4"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
requests = "^2.32.3"
email-validator = "^2.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pandas = "^2.2.3"
prisma = "^0.15.0"
PyPDF2 = "^3.0.0"
scikit-learn = "^1.0.2"
numpy = "^1.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
supabase = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
