[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
dagster = "^1.8.8"
pandas = "^2.2.3"
prisma = "^0.15.0"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }
asyncio = "*"
langchain-tools = "^0.1.34"
crewai-tools = "^0.12.0"


[tool.poetry.group.dev.dependencies]
dagster-docker = "^0.24.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
