[tool.poetry]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
dagster = "^1.8.8"
pandas = "^2.2.3"
gdown = "^4.7.1"
asyncio = "*"


[tool.poetry.group.dev.dependencies]
dagster-docker = "^0.24.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
